--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                       Qui suis-je ?</h4>
                     <p class="text-muted">Né à Marseille en 1988, c'est à 20 ans et durant mes études d'arts que je m'initie à la photographie et en parallèle à la peinture.</p>
                     <p>Chasseur d'images, je joue avec les textures, la vie des lumières, la poésie des couleurs complémentaires, et le cadrage pour se plonger dans l'esthétique au point d'en oublier le sujet.</p>
-                    <p>Mes sujets photographiés les plus récurrents sont des objets et des lieux dont le temps à donné une âme, un ethétique particulère, une beauté abstraite.</p>
+                    <p>Mes sujets photographiés les plus récurrents sont des objets et des lieux dont le temps a donné une âme, une esthétique particulière, une beauté abstraite.</p>
                     <p>Je suis aussi sensible à la nature, elle nous fait profiter de paysages magnifiques. La faune et la flore sont dotées d'une grande richesse, merveilleuse et fragile à la fois. Chaque être est unique, et je m'efforce par mes photos, d'en traduire la personnalité, le caractère unique d'une émotion dans un instant donnée.</p>
                 </div>
             </div>
